--- a/public/index.html
+++ b/public/index.html
@@ -39,3 +39,24 @@
     -->
   </body>
 </html>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBz8iniXxG4JfqqDX4dxArufYtDyOwoJp0",
+    authDomain: "react-my-burger-32eb6.firebaseapp.com",
+    databaseURL: "https://react-my-burger-32eb6.firebaseio.com",
+    projectId: "react-my-burger-32eb6",
+    storageBucket: "react-my-burger-32eb6.appspot.com",
+    messagingSenderId: "224458870377",
+    appId: "1:224458870377:web:ab34e18b4f91afe122dcf8"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
